# math-reasoning-agent

./: .gitignore  Dockerfile  README.md  app.py  index.html  pyproject.toml  requirements.txt  streamlit_app.py
assets/: example_baseline_output.txt  example_results.json  example_trained_output.txt
configs/: math_reasoning_rl.toml
environment/: __init__.py  math_reasoning_env.py  reward.py
scripts/: baseline_eval.py  post_training_eval.py
